fix: move EDA figures to root reports directory

--- a/notebooks/01_EDA_and_Stats.ipynb
+++ b/notebooks/01_EDA_and_Stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "id": "9aaf7729",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Figures will be saved to: C:\\Users\\YODAHE\\Desktop\\KAIM\\ACIS_Insurance_Analytics\\notebooks\\reports\\figures\n"
+      "Figures will be saved to: C:\\Users\\YODAHE\\Desktop\\KAIM\\ACIS_Insurance_Analytics\\reports\\figures\n"
      ]
     }
    ],
@@ -19,7 +19,7 @@
     "from pathlib import Path\n",
     "\n",
     "# Create the full path safely\n",
-    "FIGURES_PATH = Path(\"reports/figures\")\n",
+    "FIGURES_PATH = Path(\"../reports/figures\")\n",
     "FIGURES_PATH.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# DOUBLE CHECK IT REALLY EXISTS\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "id": "09e12747",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "id": "69d1fa5d",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
    "id": "155951b3",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 76,
    "id": "4f783854",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "id": "c401bfd0",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "id": "04d3ec3e",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 79,
    "id": "16e6dbca",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "id": "3e092f57",
    "metadata": {},
    "outputs": [
@@ -368,13 +368,7 @@
       "    03_claim_severity_vehicle.png\n",
       "    04_loss_ratio_gender.png\n",
       "    05_monthly_trend.png\n",
-      "    06_riskiest_postalcodes.png\n",
-      "    claim_severity_by_vehicle.pdf\n",
-      "    claim_severity_by_vehicle.png\n",
-      "    claims_vs_premium_scatter.pdf\n",
-      "    claims_vs_premium_scatter.png\n",
-      "    loss_ratio_by_province.pdf\n",
-      "    loss_ratio_by_province.png\n"
+      "    06_riskiest_postalcodes.png\n"
      ]
     }
    ],
